--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
         <section id="didactische-visie" class="flex items-center justify-center h-screen bg-yellow-300">
             <h1 class="text-8xl text-center text-gray-800 exo-2-font">Onderzoek <br>=<br>Leren<br>=<br> Onderwijs</h1>
         </section>
-        <section id="ontwerp-regel1" class="flex items-center justify-center h-screen bg-blue">
-            <h1 class="text-8xl text-center text-white exo-2-font tracking-widest">Keep It Simple Stupid</h1>
+        <section id="onderzoeks-themas" class="relative h-screen bg-cover bg-center flex items-center justify-center">
+            <div class="absolute inset-0 bg-black bg-opacity-65"></div>
+            <div id="question-container" class="relative z-10 max-w-4xl mx-auto text-center px-4">
+                <p id="random-question" class="text-7xl font-bold text-white exo-2-font leading-relaxed transition-opacity duration-1000">
+                    <!-- Questions will be populated by JavaScript -->
+                </p>
+            </div>
         </section>
         <section id=onderzoeks-vragen" class="my-10">
             <h1 class="text-2xl font-bold mb-6 text-center">Onderzoeksvragen per maatschappelijk thema en leerjaar</h1>
@@ -45,7 +50,9 @@
                 </table>
             </div>
         </section>
-    </div>
+        <section id="ontwerp-regel1" class="flex items-center justify-center h-screen bg-blue">
+            <h1 class="text-8xl text-center text-white exo-2-font tracking-widest">Keep It Simple Stupid</h1>
+        </section>
     <script src="script.js"></script>
 </body>
 </html>
