--- a/index.html
+++ b/index.html
@@ -118,7 +118,17 @@
                 <div class="col-span-2 text-xl font-bold exo-2-font text-center">Boven</div>
                 <div class="col-span-5 bg-green-500 text-white px-6 py-6 rounded-lg font-semibold exo-2-font text-2xl text-center">Vaste programma’s</div>
             </div>
-        <!-- No button on last slide -->
+            <button class="absolute bottom-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-down">
+                <i class="fas fa-chevron-down"></i>
+            </button>
+        </section>
+        <!-- Slide 7 -->
+        <section id="systeem-mens" class="relative h-screen overflow-hidden bg-center bg-no-repeat bg-fixed flex items-center justify-center" style="background-image: url('images/systeem-mens.jpeg');">
+            <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
+              <i class="fas fa-chevron-up"></i>
+            </button>
+            <!-- Content for slide 2 goes here -->
+            <!-- No button on last slide -->
         </section>
     </div>
     <script src="script.js"></script>
