--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </button>
         </section>
         <!-- Slide 2 -->
-        <section id="onderzoeks-themas" class="relative h-screen overflow-hidden bg-cover bg-center flex items-center justify-center" style="background-image: url('images/global-challenges.png');">
+        <section id="onderzoeks-themas" class="relative h-screen overflow-hidden bg-center bg-no-repeat bg-fixed flex items-center justify-center" style="background-image: url('images/global-challenges.png');">
             <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
               <i class="fas fa-chevron-up"></i>
             </button>
