--- a/index.html
+++ b/index.html
@@ -85,17 +85,8 @@
               <i class="fas fa-chevron-down"></i>
             </button>
         </section>
+
         <!-- Slide 5 -->
-        <section id="ontwerp-regel1" class="relative flex items-center justify-center h-screen overflow-hidden bg-cobalt">
-            <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
-              <i class="fas fa-chevron-up"></i>
-            </button>
-            <h1 class="text-8xl text-center text-white exo-2-font tracking-widest">Keep It Simple Stupid</h1>
-            <button class="absolute bottom-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-down">
-                <i class="fas fa-chevron-down"></i>
-            </button>
-        </section>
-        <!-- Slide 6 -->
         <section id="ontwerp-manifesto" class="relative flex flex-col p-6  items-center justify-center h-screen bg-smoky">
             <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
                 <i class="fas fa-chevron-up"></i>
@@ -122,12 +113,22 @@
                 <i class="fas fa-chevron-down"></i>
             </button>
         </section>
-        <!-- Slide 7 -->
+        <!-- Slide 6 -->
         <section id="systeem-mens" class="relative h-screen overflow-hidden bg-center bg-no-repeat bg-fixed flex items-center justify-center" style="background-image: url('images/systeem-mens.jpeg');">
             <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
               <i class="fas fa-chevron-up"></i>
             </button>
-            <!-- Content for slide 2 goes here -->
+            <!-- Content for slide goes here -->
+            <button class="absolute bottom-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-down">
+                <i class="fas fa-chevron-down"></i>
+            </button>
+        </section>
+        <!-- Slide 7 -->
+        <section id="ontwerp-regel1" class="relative flex items-center justify-center h-screen overflow-hidden bg-cobalt">
+            <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
+                <i class="fas fa-chevron-up"></i>
+            </button>
+            <h1 class="text-8xl text-center text-white exo-2-font tracking-widest">Keep It Simple Stupid</h1>
             <!-- No button on last slide -->
         </section>
     </div>
