Changed background colors

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
       .bg-bubble {
         background-color: #ff5da9;
       }
+      .bg-butter {
+        background-color: #fef0ca;
+      }
+      .bg-foggy {
+        background-color: #fdf9f0;
+      }
+      .bg-turtle {
+        background-color: #96b1ac;
+      }
       .arrow {
       fill: none;
       stroke: #333;
@@ -185,7 +194,7 @@
       </section>
 
     <!-- Slide 5: Agile Education Manifesto -->
-    <section id="ontwerp-manifesto" class="relative flex flex-col p-4 py-20 items-center justify-center min-h-screen bg-smoky overflow-auto">
+    <section id="ontwerp-manifesto" class="relative flex flex-col p-4 py-20 items-center justify-center min-h-screen bg-foggy overflow-auto">
         <!-- Top navigation arrow -->
         <button class="absolute top-4 left-1/2 transform -translate-x-1/2 text-white bg-gray-700/10 rounded-full p-2 hover:bg-gray-600 arrow-up">
         <i class="fas fa-chevron-up"></i>
@@ -252,7 +261,7 @@
       <!-- Slide 6 -->
       <section
         id="systeem-mens"
-        class="relative h-screen overflow-hidden bg-center bg-no-repeat bg-scroll md:bg-fixed flex items-center justify-center"
+        class="relative h-screen overflow-hidden bg-center bg-no-repeat bg-scroll md:bg-fixed flex items-center justify-center bg-butter"
         style="background-image: url('images/systeem-mens.jpeg');"
       >
         <button
